put in in style for the jumbo tron, and added some containers and colomns

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
-#h1 {
+.jumbotron {
 
     text-align: center;
+    background-color: black;
+    color: red;
+
+}
+
+body {
+
+    background-color: skyblue;
 
 }
