--- a/style.css
+++ b/style.css
@@ -11,3 +11,79 @@ body {
     background-color: skyblue;
 
 }
+
+h2 {
+
+    font-size: 1.5rem;
+
+}
+
+
+
+
+.r2a {
+	border: 1px solid rgb(248, 150, 166);
+	border-radius: 0.25rem;
+	padding-left: 1rem;
+}
+
+.btn-primary {
+	background-color: rgb(248, 150, 166);
+}
+
+#buttons-view,
+#city-input {
+	margin-top: 1rem;
+	border: 1px solid rgb(248, 150, 166);
+	border-radius: 0.25rem;
+}
+
+.list-group-item {
+	background-color: #efefe8ff;
+}
+
+.card {
+	background-color: rgb(248, 150, 166);
+}
+
+.card-body {
+	padding: 0.35rem;
+}
+
+.uvGreen {
+	background-color: lightgreen;
+	border-radius: 5px;
+}
+
+.uvYellow {
+	background-color: lightyellow;
+	border-radius: 5px;
+}
+
+.uvOrange {
+	background-color: salmon;
+	border-radius: 5px;
+}
+
+.uvRed {
+	background-color: palevioletred;
+	border-radius: 5px;
+}
+
+.uvPurple {
+	background-color: violet;
+	border-radius: 5px;
+}
+
+img {
+	width: 15%;
+	height: 15%;
+}
+
+.card-text {
+	font-size: 10pt;
+}
+
+.forcast {
+	padding: 1rem;
+}
