--- a/style.css
+++ b/style.css
@@ -19,22 +19,20 @@ h2 {
 }
 
 
-
-
 .r2a {
-	border: 1px solid rgb(248, 150, 166);
+	border: 1px solid grey;
 	border-radius: 0.25rem;
 	padding-left: 1rem;
 }
 
 .btn-primary {
-	background-color: rgb(248, 150, 166);
+	background-color: grey;
 }
 
 #buttons-view,
 #city-input {
 	margin-top: 1rem;
-	border: 1px solid rgb(248, 150, 166);
+	border: 1px solid grey;
 	border-radius: 0.25rem;
 }
 
@@ -43,7 +41,7 @@ h2 {
 }
 
 .card {
-	background-color: rgb(248, 150, 166);
+	background-color: grey;
 }
 
 .card-body {
