--- a/style.css
+++ b/style.css
@@ -49,39 +49,31 @@ h2 {
 }
 
 .uvGreen {
-	background-color: lightgreen;
+	background-color: green;
 	border-radius: 5px;
 }
 
 .uvYellow {
-	background-color: lightyellow;
+	background-color: yellow;
 	border-radius: 5px;
 }
 
 .uvOrange {
-	background-color: salmon;
+	background-color: orange;
 	border-radius: 5px;
 }
 
 .uvRed {
-	background-color: palevioletred;
+	background-color: red;
 	border-radius: 5px;
 }
 
 .uvPurple {
-	background-color: violet;
+	background-color: purple;
 	border-radius: 5px;
 }
 
 img {
-	width: 15%;
-	height: 15%;
-}
-
-.card-text {
-	font-size: 10pt;
-}
-
-.forcast {
-	padding: 1rem;
+	width: 10%;
+	height: 10%;
 }
